link to their experience txt

--- a/ravisir.html
+++ b/ravisir.html
@@ -46,9 +46,10 @@ things are needed
 3. What ever amount you like to give
 
 I have seen 6 students of Ravi Sir who are doing great
-job in their companies. I personally <a href="ravisirstudents.html">referred 3 people</a>
+job in their companies. I personally referred 3 people
 in the last year, who are working now in companies with
-great confidence. I wish you a great career like them.
+great confidence. You can <a href="ravisirstudents.html">check their experiences here</a>.
+I wish you have a great career like them.
 
 If you have any questions, or there's anything I can do to
 make you successful, <a href="mailto:rohini.kumar@gmail.com">please get in touch</a> 9492235028.
