I love Vizag. Period.

--- a/ravisir.html
+++ b/ravisir.html
@@ -16,7 +16,7 @@ body{
 <pre>
 Hi friend,
 
-I love Vizag. My dream is to make every graduate from Vizag
+I <a href="ilovevizag.html">love</a> Vizag. My dream is to make every graduate from Vizag
 to get a job. But many people are without a job after
 graduation. They think Ameerpet is the solution for their
 fate, but it is not true. It's full of black holes. Which
