spelling correction and link to contacts

--- a/ilovevizag.html
+++ b/ilovevizag.html
@@ -17,7 +17,7 @@ Hi,
 
 <br>
 
-I am Rohini Barla. I was born in Visakhapatnam. I studied LKG to BTech in Vizag. Did my BTech in CSE @GITAM college. Later did my MTech @IIT Kanpur. Kanpur has imparted unwavering confidence in me. Later worked in Microsoft for 7 years. Moved to a startup, where I developed iOS SDK for their mobile fabric platform. I have trained ~100 people to get a job as fresher (as iOS Developer), when they were not freshers. I exactly know which capabilities you need to start your career in software industry. I want to settle in Vizag. I want people in Vizag to blossom. I want Vizag to thrive. I want to create oppurtunities in Vizag, such that no one has to move out of Vizag to get a challenging and well paid jobs. If you have any questions, or there's anything I can do to make you successful, <a href="mailto:rohini.kumar@gmail.com">please get in touch</a> 9492235028.
+I am Rohini Barla. I was born in Visakhapatnam. I studied LKG to BTech in Vizag. Did my BTech in CSE @GITAM college. Later did my MTech @IIT Kanpur. Kanpur has imparted unwavering confidence in me. Later worked in Microsoft for 7 years. Moved to a startup, where I developed iOS SDK for their mobile fabric platform. I have trained ~100 people to get a job as fresher (as iOS Developer), when they were not freshers. I exactly know which capabilities you need to start your career in software industry. I want to settle in Vizag. I want people in Vizag to blossom. I want Vizag to thrive. I want to create oppurtunities in Vizag, such that no one has to move out of Vizag to get a challenging and well paid jobs. If you have any questions, or there's anything I can do to make you successful, please get in touch.
 <br>
 <pre>
 -
