redirect index page to mock interviews page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Welcome to the journey
+<html>
+  <head>
+    <title>Redirect to Free Mock Interviews for iOS Developers</title>
+    <META http-equiv="refresh" content="2;URL=mock.html">
+<style type="text/css">
+body{
+	width: 75%;
+	max-width: 640px;
+	margin: 20%;
+    font-size:36px;
+    font-family:monospace;
+}
+</style>
+  </head>
+  <body>
+    <h2>
+        <center>Welcome to the journey</center>
+    </h2>
+  </body>
+</html>
