Links to the Heros' work

--- a/heros.html
+++ b/heros.html
@@ -15,15 +15,39 @@ body{
 
 <pre>
 
-People:
 <img src="heros/00DougEngelbart.jpg" width="800">
+<br>
+<a href="http://worrydream.com/Engelbart/">Doug Engelbart</a>
+<br><br><br><br><br><br>
 <img src="heros/01AlanKay.jpg" width="800">
-<img src="heros/02Alan_Kay_Presenting.jpg" width="800">
+<br>
+<a href="https://www.ted.com/talks/alan_kay_shares_a_powerful_idea_about_ideas">Alan Kay</a>
+<br><br><br><br><br><br>
+<!--img src="heros/02Alan_Kay_Presenting.jpg" width="800"-->
 <img src="heros/03ChrisLattner.jpg" width="800">
+<br>
+<a href="http://www.nondot.org/sabre/">Chris Lattner</a>
+<br><br><br><br><br><br>
 <img src="heros/04MartinFowler.jpg" width="800">
+<br>
+<a href="http://martinfowler.com/design.html">Martin Fowler</a>
+<br><br><br><br><br><br>
 <img src="heros/05JoeEdelman.jpg">
+<br>
+<a href="http://nxhx.org/maximizing/">Joe Edelman</a>
+<br><br><br><br><br><br>
 <img src="heros/10BretVictorHelping.jpg" width="800">
+<br>
+Best material you can find on Bret Victor's <a href="http://worrydream.com">website</a>, just check
+a <a href="http://worrydream.com/Showreel2012">short video</a> of the work he has done in recent years.
+Also check these:
+<a href="http://worrydream.com/magicink/">Magic Ink</a> // must read for a software developer
+<a href="http://worrydream.com/LearnableProgramming/">Learnable Programming</a>
+<br><br><br><br><br><br>
 <img src="heros/quine-relay.png">
+<br>
+<a href="https://github.com/mame/quine-relay">quine-relay</a>
+<br><br><br><br><br><br>
 </pre>
 
 </body>
