added http://www.nand2tetris.org reference

--- a/mrd.html
+++ b/mrd.html
@@ -19,6 +19,7 @@ References:
 [1] To get an understanding of latest OS features check 
     OS X El Capitan <a href="https://www.apple.com/osx/all-features/pdf/osx_elcapitan_core_technologies_overview.pdf">Core Technologies Overview</a>
 [2] Check out the work of <a href="heros.html">these people</a>
+[3] Check <a href="http://www.nand2tetris.org">Nand2Tetris</a> course
 
 
 Goals:
