added link to Alan Kay's AMA on HN

--- a/heros.html
+++ b/heros.html
@@ -22,6 +22,8 @@ body{
 <img src="heros/01AlanKay.jpg" width="800">
 <br>
 <a href="https://www.ted.com/talks/alan_kay_shares_a_powerful_idea_about_ideas">Alan Kay</a>
+<br>
+<a href="https://news.ycombinator.com/item?id=11939851">Alan Kay's AMA on Hacker News</a>
 <br><br><br><br><br><br>
 <!--img src="heros/02Alan_Kay_Presenting.jpg" width="800"-->
 <img src="heros/03ChrisLattner.jpg" width="800">
