some reordering of sentences

--- a/nand2tetris.html
+++ b/nand2tetris.html
@@ -14,22 +14,25 @@ body{
 <body>
 
 <b>My experience of nand2tetris part 1</b>
-
+<br>
+Build a Modern Computer from First Principles: From Nand to Tetris
+    
 <br>
 <br>
 <br>
 
-The projects were clear and well defined. The tools were just to the task. The course is organized as projects (build chips) for each abstraction layer. The lectures drive the concepts involved to understand the layer that has to be implemented. And the layer it depended on, and the layer that will consume this layer.
+
+Nand2Tetris course is organized as projects (build chips) for each abstraction layer. The projects were clear and well defined. The tools were just to the task. The lectures drive the concepts involved to understand the layer that has to be implemented. And the layer it depended on, and the layer that will consume this layer.
 
 <br>
 <br>
 
-The whole course went by building key components in one layer per week. Layer by layer I was able to build a basic gates, MUX, ALU, Register, RAM, CPU, Computer, Assembler. All starting with NAND gates.
+The whole course went by building key components in one layer per week. Layer by layer I was able to build a basic gates, MUX, ALU, Register, RAM, CPU, Computer, Assembler. All starting with NAND gates and using chips built in previous layer.
 
 <br>
 <br>
 
-I got excited after completing the projects one after the other. Which drove me to finish all the 6 weeks course content and projects in 3 days. After completing the first project, I hit a flow. Decided to go with the flow, left out everything else. Once I was able to make all tests pass with the CPU chip I built, I was so happy. One thing I used is to play the video lectures @2x speed. After becoming comfortable with that speed. Watching the video lectures at normal speed, sounded like a slow motion video. Our brains are so quick to adapt. Just try for yourself.
+I got excited after completing each project one after the other. Which drove me to finish all the 6 weeks course content and projects in 3 days. After completing the first project, I hit a flow. Decided to go with the flow, left out everything else. Once I was able to make all tests pass with the CPU chip I built, I was so happy. One thing I used is to play the video lectures @2x speed. After becoming comfortable with that speed. Watching the video lectures at normal speed, sounded like a slow motion video. Our brains are so quick to adapt. Just try for yourself.
 
 <br>
 <br>
