Added link to Building a BitTorrent client from scratch in C#

--- a/mrd.html
+++ b/mrd.html
@@ -20,6 +20,7 @@ References:
     OS X El Capitan <a href="https://www.apple.com/osx/all-features/pdf/osx_elcapitan_core_technologies_overview.pdf">Core Technologies Overview</a>
 [2] Check out the work of <a href="heros.html">these people</a>
 [3] Check <a href="http://www.nand2tetris.org">Nand2Tetris</a> course
+[4] Check out "Building a <a href="https://cheatdeath.github.io/research-bittorrent-doc/">BitTorrent client</a> from scratch in C#"
 
 
 Goals:
