redirecting to hero's page.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>Redirect to Free Mock Interviews for iOS Developers</title>
-    <META http-equiv="refresh" content="2;URL=mock.html">
+    <title>Redirect to Hero's of Software Engineering</title>
+    <META http-equiv="refresh" content="2;URL=heros.html">
 <style type="text/css">
 body{
 	width: 75%;
