Added Elon Musk

--- a/heros.html
+++ b/heros.html
@@ -38,6 +38,10 @@ body{
 <br>
 <a href="http://nxhx.org/maximizing/">Joe Edelman</a>
 <br><br><br><br><br><br>
+<img src="heros/06ElonMusk.jpg">
+<br>
+<a href="https://en.wikipedia.org/wiki/Elon_Musk">Elon Musk</a>
+<br><br><br><br><br><br>
 <img src="heros/10BretVictorHelping.jpg" width="800">
 <br>
 Best material you can find on Bret Victor's <a href="http://worrydream.com">website</a>, just check
