added Jonathan Blow, related to Gaming

--- a/heros.html
+++ b/heros.html
@@ -42,6 +42,10 @@ body{
 <br>
 <a href="https://en.wikipedia.org/wiki/Elon_Musk">Elon Musk</a>
 <br><br><br><br><br><br>
+<img src="heros/07JonathanBlow.jpg">
+<br>
+<a href="https://www.youtube.com/user/jblow888">Jonathan Blow</a>
+<br><br><br><br><br><br>
 <img src="heros/10BretVictorHelping.jpg" width="800">
 <br>
 Best material you can find on Bret Victor's <a href="http://worrydream.com">website</a>, just check
