experimenting to load different chess boards in Chess960

--- a/chess960/chess.html
+++ b/chess960/chess.html
@@ -8,11 +8,13 @@
 
 </head>
 <body>
+<p id="chessGamePlay">
 <div class="cbdiagram"
         data-size="800"
         data-fen="bbqnnrkr/pppppppp/8/8/8/8/PPPPPPPP/BBQNNRKR w - - 0 1"
-        data-legend="960 Moves.">
-        data-title="Mine Finally"
+        data-legend="960 Moves."
+        data-title="Mine Finally">
 </div>
+</p>
 </body>
 </html>
