renamed to Ayam

--- a/ayam/index.html
+++ b/ayam/index.html
@@ -13,13 +13,15 @@ body{
   </head>
   <body>
     <h2>
-        Rohini Technologies
+       Ayam 
     </h2>
     Workshops
     <br>
     Job Training
     <br>
     Fundamentals of Computing
+    <br>
+    Competitive Coding 
     <br>
 
   </body>
