--- a/devabhasha/pre/index.html
+++ b/devabhasha/pre/index.html
@@ -7,14 +7,15 @@
     <script src="https://w.soundcloud.com/player/api.js"></script>
 </head>
 <body>
-    <h1>My SoundCloud Playlist</h1>
+    <h1>Devabhasha: Songs, Shlokas and Mantras</h1>
+    <h2>Class Play Group</h2>
     <iframe id="soundcloud-player" 
             width="100%" 
             height="166" 
             scrolling="no" 
             frameborder="no" 
             allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/0">
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/0&auto_play=true">
     </iframe>
     <script>
         // List of SoundCloud track URLs
